@@ -708,6 +708,9 @@ Release 0.22.0 - Unreleased
     HDFS-1782. Fix an NPE in RFSNamesystem.startFileInternal(..).
     (John George via szetszwo)
 
+    HDFS-1821. Fix username resolution in NameNode.createSymlink(..) and
+    FSDirectory.addSymlink(..).  (John George via szetszwo)
+
     HDFS-1845. Symlink comes up as directory after namenode restart.
     (John George via eli)
 
